<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".PPTActivity$PlaceholderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/description_text"
        android:id="@+id/descriptionTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/editText"
        android:width="100dip"
        android:layout_below="@id/descriptionTextView"
        android:layout_alignBottom="@+id/startButton"
        android:numeric="integer|signed|decimal"
        android:singleLine="true"
        android:textAlignment="viewEnd"
        android:gravity="end"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/minutes"
        android:id="@+id/minutesTextView"
        android:layout_alignTop="@+id/editText"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/editText"
        android:paddingTop="10dip" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:id="@+id/startButton"
        android:layout_below="@+id/descriptionTextView"
        android:layout_toRightOf="@+id/minutesTextView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_button"
        android:id="@+id/stopButton"
        android:layout_alignBottom="@+id/startButton"
        android:layout_toRightOf="@+id/startButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zero"
        android:id="@+id/timerTextView"
        android:layout_below="@+id/startButton"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"
        android:padding="10dip" />

</RelativeLayout>
